plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.140'
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    repositories {
        exclusiveContent {
            forRepository {
                maven {
                    url "https://cursemaven.com"
                }
            }
            filter {
                includeGroup "curse.maven"
            }
        }
    }
}

base {
    archivesName = "${mod_name}-neoforge-${minecraft_version}"
}


java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neo_version

    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

//    interfaceInjectionData {
//        it.from(project.files('src/main/resources/nekojs.interface_injection.json'))
//    }

    runs {
        client {
            client()

            jvmArguments.add('-Dfml.earlydisplay=false')
            environment.put('XDG_SESSION_TYPE', 'x11')

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            clientData()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

jarJar.enabled = true
dependencies {
    // Optional JS engine integration (NekoJS). Compile against it, but don't bundle it.
    compileOnly files("libs/nekojs-26.1.1-1.0.7.jar")
    runtimeOnly files("libs/nekojs-26.1.1-1.0.7.jar")
    implementation("curse.maven:graal-1504336:7884547")
}

tasks.withType(Jar).configureEach {
    archiveBaseName.set(mod_id)
    archiveVersion.set("${minecraft_version}-${mod_version}")
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-parameters']
    options.debug = true
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            groupId = project.group
            artifactId = base.archivesName.get()
            version = project.version

            pom.withXml {
                def dependenciesNode = asNode().getAt("dependencies")[0]
                if (dependenciesNode != null) {
                    // 这里添加你希望保留在 POM 中的 groupId 或 artifactId，也就是从 Maven 拉依赖时会附带的库、模组啥的
                    def whiteList = [
                    ]

                    def dependencies = dependenciesNode.children()
                    def toRemove = []

                    dependencies.each { dep ->
                        def artifactId = dep.artifactId.text()
                        def groupId = dep.groupId.text()

                        if (!whiteList.contains(artifactId) && !whiteList.contains(groupId)) {
                            toRemove.add(dep)
                        }
                    }

                    toRemove.each { dependenciesNode.remove(it) }
                }
            }
        }
    }

    repositories {
        def modVersion = project.findProperty('mod_version') ?: 'unknown'

        boolean isSnapshot = modVersion.toLowerCase().contains('snapshot')

        def publishUrl = isSnapshot ?
                "https://maven.sighs.cc/repository/maven-snapshots/" :
                "https://maven.sighs.cc/repository/maven-releases/"

        def publishUser = System.getenv("SIGHS_PUBLISH_USER")
        def publishPassword = System.getenv("SIGHS_PUBLISH_PASSWORD")

        maven {
            name = "remoteRepo"
            url = uri(publishUrl)
            credentials {
                username = publishUser
                password = publishPassword
            }
        }
    }
}

tasks.withType(GenerateModuleMetadata).configureEach {
    enabled = false
}
